--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,8 +42,18 @@
     margin-top:3% !important;
 }
 
-.page-item{
-    margin-top:50px !important;
+.paginador{
+    display: flex;
+    padding-left: 0px;
+    list-style: none;
+    border-radius: 0.25rem;
+    justify-content: center;
     font-weight: bold !important;
-    font-size: 5% !important;
+}
+
+ul.pagination{
+    background-color: #ffffff3b !important;
+    padding-top:5px !important; 
+    padding-right: 3px !important;
+    padding-left: 3px !important;
 }
