--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,3 +69,63 @@ ul.pagination{
 div.estiloSombreado{
     background-color: #ffffff3b !important;
 }
+
+.destiloSombreado{
+    background-color: rgba(95, 92, 92, 0.562) !important;
+}
+
+/*Enlaces con apariencia de botones*/
+
+a.button4{
+    display:inline-block;
+    padding: 0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    color:#FFFFFF !important;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align: center;
+    transition: all 0.2s;
+    background-color: #2a5483;
+}
+
+a.button4:hover{
+    border-color: rgba(255,255,255,1);
+}
+
+/* @media all and (max-width:30em)
+{
+    a.button4
+    {
+        margin:0.1em auto;   
+    }
+} */
+
+/* a.button5{
+    display:inline-block;
+    padding: 0.3em 1.2em;
+    margin:0 0.1em 0.1em 0;
+    border:0.16em solid rgba(255,255,255,0);
+    border-radius:2em;
+    box-sizing: border-box;
+    text-decoration: none;
+    color:#FFFFFF !important;
+    text-shadow: 0 0.04em 0.04em rgba(0,0,0,0.35);
+    text-align: center;
+    transition: all 0.2s;
+    background-color: #2a5483;
+}
+
+a.button5:hover{
+    border-color: rgba(255,255,255,1);
+}
+
+@media all and (max-width:30em)
+{
+    a.button5
+    {
+        margin:0.1em auto;   
+    }
+} */
