--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,16 @@
 }
 
 .sesion{
-    background: url('../img/background2.jpg') no-repeat center center fixed;
+    background: url('../img/background2.jpg') no-repeat center center fixed !important;
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    -o-background-size: cover !important;
+    background-size: cover !important;
+    font-weight: bold !important;
+}
+
+.sesion2{
+    background: url('../img/background4.jpg') no-repeat center center fixed !important;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -13,13 +22,15 @@
 
 
 .sinsesion{
-    background: url('../img/background3.jpg') no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background: url('../img/background3.jpg') no-repeat center center fixed !important;
+    -webkit-background-size: cover !important;
+    -moz-background-size: cover !important;
+    -o-background-size: cover !important;
+    background-size: cover !important;
     font-weight: bold !important;
 }
+
+
 
 .navbar{
     font-weight: bold !important;
