--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 *{
     font-weight: bold !important;
+    font-family: cursive !important;
 }
 
 .sesion{
@@ -30,20 +31,19 @@
     font-weight: bold !important;
 }
 
-
-
 .navbar{
     font-weight: bold !important;
 }
 
 .card
 {
-    background-color:#ffffff3b !important;
+    background-color:#ffffff73 !important;
 }
 
-.tipo{
-    height:90px !important;
-    width:53px !important;
+.tipo{   
+    border-radius: 50% !important;
+    width: 100px !important;
+    height: 100px !important;
 }
 
 .card-img-top{
@@ -78,11 +78,11 @@ ul.pagination{
 }
 
 div.estiloSombreado{
-    background-color: #ffffff3b !important;
+    background-color:#ffffff73 !important;
 }
 
 form.estiloSombreado{
-    background-color: #ffffff3b !important;
+    background-color:#ffffff73 !important;
 }
 
 .destiloSombreado{
@@ -170,4 +170,89 @@ ul>li{
       margin-left: auto;
       margin-right: auto;
     }
+}
+.ct-label{
+    color:black !important;
+}
+
+/*Estilos para las herramientas*/
+#dice {
+	position: absolute;
+	top: -500px; left: 43%;
+	width: 100px; height: 100px;
+ 
+  -moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+	backface-visibility: hidden;
+
+	-webkit-transform-style: preserve-3d;
+	-moz-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	-o-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+}
+
+#dice .face {
+	background: url(https://guima-games.firebaseapp.com/images/dice.png) no-repeat;
+	background-size: 300px 200px;
+	color: white;
+	font-size: 20px;
+	position: absolute;
+	width: 100px; height: 100px;
+	display: block;
+}
+
+#dice .front {
+	-webkit-transform: perspective(000px) rotateX(0) translateZ(50px);
+	-moz-transform: perspective(000px) rotateX(0) translateZ(50px);
+	-ms-transform: perspective(000px) rotateX(0) translateZ(50px);
+	-o-transform: perspective(000px) rotateX(0) translateZ(50px);
+	transform: perspective(000px) rotateX(0) translateZ(50px);
+}
+
+#dice .back {
+	background-position: -100px 0;
+	-webkit-transform: perspective(000px) rotateY(180deg) translateZ(50px);
+	-moz-transform: perspective(000px) rotateY(180deg) translateZ(50px);
+	-ms-transform: perspective(000px) rotateY(180deg) translateZ(50px);
+	-o-transform:  perspective(000px) rotateY(180deg) translateZ(50px);
+	transform: perspective(000px) rotateY(180deg) translateZ(50px);
+}
+
+#dice .left {
+	background-position: -200px 0;
+	-webkit-transform: perspective(000px) rotateY(90deg) translateZ(50px);
+	-moz-transform: perspective(000px) rotateY(90deg) translateZ(50px);
+	-ms-transform: perspective(000px) rotateY(90deg) translateZ(50px);
+	-o-transform: perspective(000px) rotateY(90deg) translateZ(50px);
+	transform: perspective(000px) rotateY(90deg) translateZ(50px);
+}
+
+#dice .bottom {
+	background-position: 0 -100px;
+	-webkit-transform: perspective(000px) rotateX(-90deg)  translateZ(50px);
+	-moz-transform: perspective(000px) rotateX(-90deg)  translateZ(50px);
+	-ms-transform: perspective(000px) rotateX(-90deg)  translateZ(50px);
+	-o-transform: perspective(000px) rotateX(-90deg)  translateZ(50px);
+	transform: perspective(000px) rotateX(-90deg)  translateZ(50px);
+}
+
+#dice .top {
+	background-position: -100px -100px;
+	-webkit-transform:perspective(000px) rotateX(90deg) translateZ(50px);
+	-moz-transform:perspective(000px) rotateX(90deg) translateZ(50px);
+	-ms-transform:perspective(000px) rotateX(90deg) translateZ(50px);
+	-o-transform:perspective(000px) rotateX(90deg) translateZ(50px);
+	transform:perspective(000px) rotateX(90deg) translateZ(50px);
+}
+
+#dice .right {
+	background-position: -200px -100px;
+	-webkit-transform:perspective(000px) rotateY(-90deg)  translateZ(50px);
+	-moz-transform:perspective(000px) rotateY(-90deg)  translateZ(50px);
+	-ms-transform:perspective(000px) rotateY(-90deg)  translateZ(50px);
+	-o-transform:perspective(000px) rotateY(-90deg)  translateZ(50px);
+	transform:perspective(000px) rotateY(-90deg)  translateZ(50px);
 }
