--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,10 @@
     font-family: cursive !important; 
 }
 
+.card-body {
+    padding:0.75rem !important;
+}
+
 @media screen and (max-width: 426px) {
      *{
         font-family: cursive !important;
