--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,3 +1,4 @@
+@use "sass:meta";
 /**
  * This injects Tailwind's base styles, which is a combination of
  * Normalize.css and some additional base styles.
@@ -57,5 +58,5 @@ select:invalid {
 }
 
 
-@import "./filters.scss";
-@import "./dice.scss";
+@include meta.load-css("filters.scss");
+@include meta.load-css("dice.scss");
